createVMs/master-workshop-nsg.json
{
  "name": "master-workshop",
  "type": "Microsoft.Network/networkSecurityGroups",
  "location": "[resourceGroup().location]",
  "properties": {
  "securityRules": [
    {
      "protocol": "TCP",
      "sourcePortRange": "*",
      "destinationPortRange": "443",
      "sourceAddressPrefix": "*",
      "destinationAddressPrefix": "*",
      "access": "Allow",
      "priority": 110,
      "direction": "Inbound",
      "name": "https"
    },
    {
      "protocol": "TCP",
      "sourcePortRange": "*",
      "destinationPortRange": "80",
      "sourceAddressPrefix": "*",
      "destinationAddressPrefix": "*",
      "access": "Allow",
      "priority": 100,
      "direction": "Inbound",
      "name": "http"
    },
    {
      "protocol": "TCP",
      "sourcePortRange": "*",
      "destinationPortRange": "2379",
      "sourceAddressPrefix": "*",
      "destinationAddressPrefix": "*",
      "access": "Allow",
      "priority": 120,
      "direction": "Inbound",
      "name": "etcd"
    },
    {
      "protocol": "*",
      "sourcePortRange": "*",
      "destinationPortRange": "8443",
      "sourceAddressPrefix": "*",
      "destinationAddressPrefix": "*",
      "access": "Allow",
      "priority": 140,
      "direction": "Inbound",
      "name": "api"
    },
    {
      "protocol": "TCP",
      "sourcePortRange": "*",
      "destinationPortRange": "9090",
      "sourceAddressPrefix": "*",
      "destinationAddressPrefix": "*",
      "access": "Allow",
      "priority": 150,
      "direction": "Inbound",
      "name": "cockpit"
    },
    {
      "protocol": "TCP",
      "sourcePortRange": "*",
      "destinationPortRange": "22",
      "sourceAddressPrefix": "*",
      "destinationAddressPrefix": "*",
      "access": "Allow",
      "priority": 1000,
      "direction": "Inbound",
      "name": "default-allow-ssh"
    }
  ]
}
}
